# fisheye_matcher

./: .bazelrc  .gitignore  BUILD  CMakeLists.txt  Makefile  README.md  WORKSPACE  bazel-bin  bazel-fisheye_matcher  bazel-out  bazel-testlogs  main  main copy.cpp  main.cpp  main_old.cpp  main_viz.cpp  old.cpp
.old/: fisheye.cpp  main2.cpp  main3.cpp
cc/: ang_matcher.cpp  ang_matcher.h  aux.h  camera.cpp  camera.h  feature_matcher.cpp  feature_matcher.h  image.cpp  image.h  kannala.hpp  main.cpp  mainb.cpp
cc/qt/: main_window.cc  main_window.h  main_window.ui  mainqt.cc
images/: cams.json  imgs.json  matches.txt
images/in/: img_json.py  img_rename.py  pairs.json
src/: main.cpp  main.py  main2.py  main_ang_matcher_v0.cpp  main_compare copy.cpp  main_compare.cpp  main_compare_wr.cpp  main_distort.cpp  main_fe_lens.cpp  main_fe_lens_matcher.cpp
src/ang_matcher/: BUILD  ang_matcher.cpp  ang_matcher.h  aux.h  camera.cpp  camera.h  kannala.hpp  main.cpp
src/ang_matcher_v0/: BUILD  ang_matcher.cpp  ang_matcher.h  aux.cpp  camera.h
src/fe_lens/: BUILD  fe_lens.cpp  fe_lens.hpp
src/matcher/: BUILD  matcher.cpp  matcher.hpp
